--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"> -->
   </head>
   <body>
     <div id="container">
@@ -15,9 +12,9 @@
       <div id="page-text-content">
         <div class="page-text-entry">
           <h3> Omar Zouiche </h3>
-          <p> I am a computer programmer living in Toulouse, France. <br />
-            Most of the time, I do fullstack web developpement. <br />
-            Feel free to reach out by mail. </p>
+          <p> I am a computer programmer.
+            <br />
+            Most of the time, I do fullstack web developpement. 
         </div>
         <hr/>
         <div class="page-text-entry">
@@ -37,15 +34,15 @@
           <ul>
             <li class="list-entry"> 
               <span class="list-entry-year"> 2018 </span>
-              <span class="list-entry-text">Preparatory Classes for French Engineering Schools (CPGE TSI),<span class="secondary-text"> University of La Rochelle </span> </p>
+              <span class="list-entry-text">Preparatory Classes for French Engineering Schools (CPGE TSI)<span class="secondary-text"> University of La Rochelle </span> </p>
             </li>
             <li class="list-entry"> 
               <span class="list-entry-year"> 2021 </span> 
-              <span class="list-entry-text">BSc in Mathematics,<span class="secondary-text"> University of Montpellier </span> </span>
+              <span class="list-entry-text">BSc in Mathematics<span class="secondary-text"> University of Montpellier </span> </span>
             </li>
             <li class="list-entry"> 
               <span class="list-entry-year"> 2022 </span>
-              <span class="list-entry-text">MSc 1 in Mathematical Modelling & Numerical Analysis,<span class="secondary-text"> University of Montpellier </span></span>
+              <span class="list-entry-text">MSc 1 in Mathematical Modelling & Numerical Analysis<span class="secondary-text"> University of Montpellier </span></span>
             </li>
           </ul>
         </div>
@@ -57,16 +54,13 @@
               <span class="list-entry-text">Web Developer (Volunteer), <span class="secondary-text"> EIN (Student Association in Montpellier)</span> </span>
             </li>
             <li class="list-entry"> 
-              <span class="list-entry-year"> 2023 </span>
+              <span class="list-entry-year"> 2024 </span>
               <span class="list-entry-text"> Mathematics Instructor</span>
             </li>
           </ul>
         </div>
         <hr/>
         <div class="page-text-entry">
-          <p>
-            Currently open for opportunies.
-          </p>
           <p>
             Thanks for your visit.
           </p>
