--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="container">
-      <div id="page-illustration">
-      </div>
+      <!-- <div id="page-illustration"> -->
+      <!-- </div> -->
       <div id="page-text-content">
         <div class="page-text-entry">
           <h3> Omar Zouiche </h3>
