content and styles refresh

--- a/index.html
+++ b/index.html
@@ -6,62 +6,104 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="container">
-      <div id="page-text-content">
-        <div class="page-text-entry">
-          <h3> Omar Zouiche </h3>
-          <p> I am a computer programmer.
-            <br />
-            Most of the time, I do fullstack web developpement. 
+
+      <div>
+        <div class="banner">
+          <img src="./public/media/me.JPEG" />
+
+          <div class="info">
+
+            <div class="info-name">
+              <h2>Omar Zouiche</h2>
+              <span> Programmer </span>
+            </div>
+
+            <div class="info-contact">
+              <a target="_blank" href="http://github.com/ZouicheOmar/"> Github </a>
+              <a target="_blank" href="https://www.linkedin.com/in/zouicheomar/"> Linkedin</a>
+              <a target="_blank" href="mailto:zouiche.omar@gmail.com"> Email</a>
+              <a target="_blank" href="public/media/OmarZouiche.pdf"> Resume </a>
+            </div>
+
+          </div>
         </div>
-        <hr/>
-        <div class="page-text-entry">
-          <h4> Contact & Social</h4>
-          <ul>
-            <li > <a id="email" href="mailto:zouiche.omar@gmail.com"> zouiche.omar@gmail.com </a></li>
-            <li> <a href="https://github.com/ZouicheOmar" target="blank"> github.com/ZouicheOmar </a></li>
-          </ul>
-        </div>
-        <hr/>
-        <div class="page-text-entry">
-          <span> <a id="resume" href="./public/OmarZouiche.pdf" target="blank">resume.pdf </a> </span>
-          <p> Learned Mathematics at the University of Montpellier, taught myself how to program.</p>
-        </div>
-        <div class="page-text-entry">
-          <h4> Education </h4>
-          <ul>
-            <li class="list-entry"> 
-              <span class="list-entry-year"> 2018 </span>
-              <span class="list-entry-text">Preparatory Classes for French Engineering Schools (CPGE TSI)<span class="secondary-text"> University of La Rochelle </span> </p>
-            </li>
-            <li class="list-entry"> 
-              <span class="list-entry-year"> 2021 </span> 
-              <span class="list-entry-text">BSc in Mathematics<span class="secondary-text"> University of Montpellier </span> </span>
-            </li>
-            <li class="list-entry"> 
-              <span class="list-entry-year"> 2022 </span>
-              <span class="list-entry-text">MSc 1 in Mathematical Modelling & Numerical Analysis<span class="secondary-text"> University of Montpellier </span></span>
-            </li>
-          </ul>
-        </div>
-        <div class="page-text-entry">
-          <h4> Work Experience  </h4>
-          <ul>
-            <li class="list-entry"> 
-              <span class="list-entry-year"> 2023 </span> 
-              <span class="list-entry-text">Web Developer (Volunteer), <span class="secondary-text"> EIN (Student Association in Montpellier)</span> </span>
-            </li>
-            <li class="list-entry"> 
-              <span class="list-entry-year"> 2024 </span>
-              <span class="list-entry-text"> Mathematics Instructor</span>
-            </li>
-          </ul>
-        </div>
-        <hr/>
-        <div class="page-text-entry">
+
+        <div >
+          <h3>About</h3>
+
           <p>
-            Thanks for your visit.
+            My name is Omar Zouiche, I am a computer programmer, I’ve
+            been specializing in fullstack web development.
           </p>
+          <p>
+            I graduated in Mathematics from the University of Montpellier. After
+            that, I taught myself how to program, and have been doing that
+            since.
+          </p>
+          <p>
+          I have experience through volunteering, personal projects and some
+          open source contributions. <a target="_blank" href="http://github.com/ZouicheOmar/">Github</a> is the best place to check out my
+          work.
+          </p>
+          <p>
+            I am open to interesting opportunity projects,
+            you can get in touch by <a target="_blank" href="mailto:zouiche.omar@gmail.com">mail</a>.
+          </p>
+        </div>
+
+        <div >
+          <h3>Education</h3>
+          <div class="sec-entry">
+            <span> 2018 </span>
+            <div>
+              <span class=""
+                >Preparatory Classes for French Engineering Schools (CPGE
+                TSI)</span
+              >
+              <br />
+              <span class=""> University of La Rochelle </span>
+            </div>
+          </div>
+          <div class="sec-entry">
+            <span> 2021 </span>
+            <div>
+              <span class="">BSc in Mathematics </span>
+              <br />
+              <span class=""> University of Montpellier </span>
+            </div>
+          </div>
+          <div class="sec-entry">
+            <span> 2022 </span>
+            <div>
+              <span class="">
+                MSc 1 in Mathematical Modelling & Numerical Analysis
+              </span>
+              <br />
+              <span class=""> University of Montpellier </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="">
+          <h3>Work</h3>
+
+          <div class="sec-entry">
+            <span> 2023 </span>
+            <div>
+              <span>Web Developer, Volunteer </span>
+              <br />
+              <span> Studient association, University of Montpellier <span>
+            </div>
+          </div>
+
+          <div class="sec-entry">
+            <span> 2024 </span>
+            <div>
+              <span >Mathematics Instructor</span>
+              <br />
+              <span> Acadomia </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
