--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           work.
           </p>
           <p>
-            I am open to interesting opportunity projects,
+            I am open to interesting opportunities or projects,
             you can get in touch by <a target="_blank" href="mailto:zouiche.omar@gmail.com">mail</a>.
           </p>
         </div>
