update styles and content

--- a/index.html
+++ b/index.html
@@ -1,111 +1,143 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>ozdocs</title>
+</head>
+
+<body>
+  <div class="title">
+    <span> ozdocs.fr </span>
+  </div>
+
+  <div class="banner">
+    <div class="img">
+      <img src="public/media/ozdocs_moi.png" />
+    </div>
+
+    <div class="info">
+
+      <div class="info-name">
+        <h2>Omar Zouiche</h2>
+        <span> Programmer </span>
+      </div>
+
+      <div class="info-contact">
+        <a target="_blank" href="http://github.com/ZouicheOmar/"> Github </a>
+        <a target="_blank" href="https://www.linkedin.com/in/zouicheomar/"> Linkedin</a>
+        <a target="_blank" href="mailto:zouiche.omar@gmail.com"> Email</a>
+        <a target="_blank" href="public/media/OmarZouicheCV.pdf"> Resume </a>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div>
+    <h3>About</h3>
+
+    <p>
+      I build web applications, solution focused, performant and ideally beautiful.
+    </p>
+  </div>
+
+  <div>
+    <h3>My journey</h3>
+    <p>
+      Graduated in Mathematics from the University of Montpellier, taught myself how to program.
+      I have experience through volunteering, personal projects and some
+      open source contributions. <a target="_blank" href="http://github.com/ZouicheOmar/">Github</a> is the best place
+      to check out my
+      work.
+    </p>
+
+  </div>
+
+  <div>
+    <h3>Contact</h3>
+    <p>
+      I am always open to new opportunities, you can get in touch by <a target="_blank"
+        href="mailto:zouiche.omar@gmail.com">mail</a>, or <a target="_blank"
+        href="https://www.linkedin.com/in/zouicheomar/"> linkedin</a>.
+    </p>
+  </div>
+
+  <div>
+    <h3>Education</h3>
+    <div class="sec-entry">
+      <span class="sec-entry_year">
+        2018 </span>
       <div>
-        <div class="banner">
-          <img src="./public/media/me.JPEG" />
-
-          <div class="info">
-
-            <div class="info-name">
-              <h2>Omar Zouiche</h2>
-              <span> Programmer </span>
-            </div>
-
-            <div class="info-contact">
-              <a target="_blank" href="http://github.com/ZouicheOmar/"> Github </a>
-              <a target="_blank" href="https://www.linkedin.com/in/zouicheomar/"> Linkedin</a>
-              <a target="_blank" href="mailto:zouiche.omar@gmail.com"> Email</a>
-              <a target="_blank" href="public/media/OmarZouiche.pdf"> Resume </a>
-            </div>
-
-          </div>
-        </div>
-
-        <div >
-          <h3>About</h3>
-
-          <p>
-            My name is Omar Zouiche, I am a computer programmer, I’ve
-            been specializing in fullstack web development.
-          </p>
-          <p>
-            I graduated in Mathematics from the University of Montpellier. After
-            that, I taught myself how to program, and have been doing that
-            since.
-          </p>
-          <p>
-          I have experience through volunteering, personal projects and some
-          open source contributions. <a target="_blank" href="http://github.com/ZouicheOmar/">Github</a> is the best place to check out my
-          work.
-          </p>
-          <p>
-            I am open to interesting opportunities or projects,
-            you can get in touch by <a target="_blank" href="mailto:zouiche.omar@gmail.com">mail</a>.
-          </p>
-        </div>
-
-        <div >
-          <h3>Education</h3>
-          <div class="sec-entry">
-            <span> 2018 </span>
-            <div>
-              <span class=""
-                >Preparatory Classes for French Engineering Schools (CPGE
-                TSI)</span
-              >
-              <br />
-              <span class=""> University of La Rochelle </span>
-            </div>
-          </div>
-          <div class="sec-entry">
-            <span> 2021 </span>
-            <div>
-              <span class="">BSc in Mathematics </span>
-              <br />
-              <span class=""> University of Montpellier </span>
-            </div>
-          </div>
-          <div class="sec-entry">
-            <span> 2022 </span>
-            <div>
-              <span class="">
-                MSc 1 in Mathematical Modelling & Numerical Analysis
-              </span>
-              <br />
-              <span class=""> University of Montpellier </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="">
-          <h3>Work</h3>
-
-          <div class="sec-entry">
-            <span> 2023 </span>
-            <div>
-              <span>Web Developer, Volunteer </span>
-              <br />
-              <span> Studient association, University of Montpellier <span>
-            </div>
-          </div>
-
-          <div class="sec-entry">
-            <span> 2024 </span>
-            <div>
-              <span >Mathematics Instructor</span>
-              <br />
-              <span> Acadomia </span>
-            </div>
-          </div>
-        </div>
+        <span>Preparatory Classes for French Engineering Schools </span>
+        <br />
+        <span class="sec-entry_school"> University of La Rochelle </span>
       </div>
     </div>
-  </body>
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2021 </span>
+      <div>
+        <span>BSc in Mathematics </span> <br />
+        <span class="sec-entry_school"> University of Montpellier </span>
+      </div>
+    </div>
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2022 </span>
+      <div>
+        <span>
+          MSc 1 in Mathematical Modelling & Numerical Analysis
+        </span>
+        <br />
+        <span class="sec-entry_school"> University of Montpellier </span>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <h3>Work</h3>
+
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2023 <br /> 2024 </span>
+      <div>
+        <span>Mathematics Instructor</span>
+        <br />
+        <span> <i> Freelance </i> </span>
+      </div>
+    </div>
+
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2023 </span>
+      <div>
+        <span>Web Developer, Volunteer </span>
+        <br />
+        <span> <i> Student association, University of Montpellier </i><span>
+      </div>
+    </div>
+
+
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2022 <br /> 2023 </span>
+      <div>
+        <span>Mathematics Instructor</span>
+        <br />
+        <span> <i> Acadomia, </i> </span>
+        <span> <i> Montpellier </i> </span>
+      </div>
+    </div>
+
+    <div class="sec-entry">
+      <span class="sec-entry_year"> 2022 </span>
+      <div>
+        <span>Team Manager</span>
+        <br />
+        <span> <i> Carrefour City, </i> </span>
+        <span> <i> Montpellier </i> </span>
+      </div>
+    </div>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
