added projects section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     </div>
   </div>
 
-
   <div>
     <h3>About</h3>
-
     <p>
       I build web applications, solution focused, performant and ideally beautiful.
     </p>
@@ -53,7 +51,27 @@
       to check out my
       work.
     </p>
+  </div>
 
+  <div>
+    <h3>Stuff I did</h3>
+    <ul>
+      <li>
+        <a target="_blank" href="https://abroad-vite-ujt7.vercel.app/">Abroad</a>
+        - The website for a Uni Student Association, fully serverless, built with React, Supabase and Stripe.
+        <a href="">github</a>
+      </li>
+      <li>
+        <a target="_blank" href="https://messboard.vercel.app/">Messboard</a>
+        - An app to organize text, media, urls, bookmarks on a board like canvas.
+        <a href="">github</a>
+      </li>
+      <li>
+        <a target="_blank" href="https://grunted.vercel.app/">ozdocs (old)</a>
+        - previous personal website, more "sophisticated" than this one.
+        <a href="">github</a>
+      </li>
+    </ul>
   </div>
 
   <div>
